--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -126,7 +126,7 @@ a {
 	background-color: transparent;
 }
 
-.disclaimer-text {
+/* .disclaimer-text {
 	height: 240px;
 	overflow-y: scroll;
-}
+} */
