--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -10,6 +10,12 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	background-color: #0e1f33;
 	color: rgb(194, 194, 194);
+	max-height: 100%;
+	max-width: 100%;
+}
+
+.container {
+	max-width: 100%;
 }
 
 .btn-primary:hover {
@@ -40,6 +46,7 @@ body {
 	transform: scale(1.1);
 	transition: all 0.2s ease-in;
 }
+
 
 .heroBtn {
 	background-color: #a52a2a;
@@ -145,3 +152,36 @@ a {
 	text-decoration: none;
 	background-color: transparent;
 }
+
+h2 {
+	text-align: center;
+}
+
+h4 {
+	text-align: center;
+	font-size: 110%;
+	margin-bottom: 50px;
+}
+
+input[type=checkbox] {
+	margin-right: 10px;
+	margin-bottom: 25px;
+}
+
+input[type=radio] {
+	margin-left: 40px;
+}
+
+label {
+	margin-left: 20px;
+	margin-bottom: 20px;
+}
+
+p {
+	text-align: center;
+}
+
+/* .disclaimer-text {
+	height: 240px;
+	overflow-y: scroll;
+} */
