--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -191,6 +191,19 @@ li {
 	height: 240px;
 	overflow-y: scroll;
 } */
+
+.references h1 {
+	text-align: center;
+	margin-bottom: 40px;
+}
+
+.references p {
+	text-align: left;
+	margin-bottom: 20px;
+	margin-left: 4em;
+    text-indent: -3em;
+}
+
 .team-member {
 	width: auto;
 	margin: 5px;
@@ -201,12 +214,14 @@ li {
 	border-radius: 10px;
 	letter-spacing: 0.25px;
 }
+
 .team-member p {
 	margin-bottom: 25px;
 	text-align: center;
 	padding: 0;
 	margin: 0;
 }
+
 .team-member h2 {
 	color: rgb(79, 85, 81);
 	font-size: 28px;
@@ -214,15 +229,18 @@ li {
 	margin-left: 20px;
 	text-align: center;
 }
+
 .wrapper {
 	margin-top: 6%;
 }
+
 .wrapper h1 {
 	font-family: 'Arvo', sans-serif;
 	font-size: 40px;
 	margin-bottom: 60px;
 	text-align: center;
 }
+
 .team {
 	text-align: center;
 	width: auto;
